--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="create">create</string>
     <string name="lost">Lost</string>
     <string name="found">Found</string>
+    <string name="search">Search</string>
 </resources>
