--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="category">Category</string>
     <string name="your_current_password">your current password</string>
     <string name="name_surname">Name Surname</string>
+    <string name="somebody_gmail_com">Somebody@gmail.com</string>
 </resources>
