CreateAccountActivity 1) Change phone on re_enter_password name FoundFragment 1) Add photo image receiver with scaling to image View with 100 height and width MainActivity 1) Change addNewElement to scroll views in fragments to getActivityForResult NewRequestActivity 1) Add photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="your_current_password">your current password</string>
     <string name="name_surname">Name Surname</string>
     <string name="somebody_gmail_com">Somebody@gmail.com</string>
+    <string name="sort_button">sort_button</string>
 </resources>
